k8s/cadvisor.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cadvisor
  labels:
    app: cadvisor
spec:
  containers:
  - name: cadvisor
    image: gcr.io/cadvisor/cadvisor:latest
    ports:
    - containerPort: 8080
    volumeMounts:
    - mountPath: /rootfs
      name: rootfs
      readOnly: true
    - mountPath: /var/run
      name: var-run
    - mountPath: /sys
      name: sys
      readOnly: true
    - mountPath: /var/lib/docker
      name: docker
      readOnly: true
  volumes:
  - name: rootfs
    hostPath:
      path: /
  - name: var-run
    hostPath:
      path: /var/run
  - name: sys
    hostPath:
      path: /sys
  - name: docker
    hostPath:
      path: /var/lib/docker
